--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "aws-sdk": "^2.439.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "q": "^1.5.1"
   },
   "devDependencies": {},
   "scripts": {
